# imads

./: .gitignore  Cargo.toml  Makefile  rust-toolchain.toml
benches/: preset_compare.rs
docs/guides/: README.md  architecture.md  ffi-c-cpp.md  ffi-python.md  ffi-wasm-typescript.md
docs/guides/de/: architecture.md  ffi-c-cpp.md  ffi-jvm.md  ffi-python.md  ffi-wasm-typescript.md  policy-contract-checklist.md  presets-and-benchmarks.md
docs/guides/en/: architecture.md  ffi-c-cpp.md  ffi-jvm.md  ffi-python.md  ffi-wasm-typescript.md  (+2 more)
docs/papers/: references.bib
examples/: preset_report.rs
imads-core/: Cargo.toml  build.rs
imads-core/benches/: preset_compare.rs
imads-core/examples/: preset_report.rs
imads-core/src/: lib.rs  presets.rs  types.rs
imads-core/src/backends/: mod.rs
imads-core/src/core/: acceptance.rs  engine.rs  evaluator.rs  executor.rs  poll.rs
imads-core/src/policies/: audit.rs  calibrator.rs  dids.rs  ladder.rs  margin.rs  mod.rs  scheduler.rs  search.rs  stratified_search.rs
imads-core/src/tests/: mod.rs
imads-ffi/: Cargo.toml  cbindgen.toml
imads-ffi/include/: imads.h
imads-ffi/src/: lib.rs
imads-jni/: Cargo.toml
imads-jni/src/: lib.rs
imads-jvm/: Cargo.toml
imads-jvm/kotlin/: build.gradle.kts
imads-jvm/src/: lib.rs
imads-kotlin/: build.gradle.kts
imads-py/: Cargo.toml  pyproject.toml
imads-py/python/imads/: __init__.py  _cpython.py  _graalpy.py
imads-py/src/: lib.rs
imads-scala/: build.sbt
imads-wasm/: Cargo.toml  build-npm.sh
imads-wasm/npm/: package.json
imads-wasm/src/: lib.rs
imads-wasm/wit/: imads.wit
src/: lib.rs  presets.rs  types.rs
src/backends/: cache.rs
src/core/: acceptance.rs  engine.rs  evaluator.rs  executor.rs  mod.rs  poll.rs
src/policies/: audit.rs  calibrator.rs  dids.rs  margin.rs
src/tests/: mod.rs
(+40 files in other folders)
