[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "imads"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0 OR LGPL-2.1-or-later"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "imads._imads"
python-source = "python"
